--- a/Payments/v3.8/mellat/src/Nop.Plugin.Payments.Mellat/Views/PaymentMellat/BeforeGateway.cshtml
+++ b/Payments/v3.8/mellat/src/Nop.Plugin.Payments.Mellat/Views/PaymentMellat/BeforeGateway.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Nop.Plugin.Payments.Mellat.Models
 @model BeforeGatewayModel
 
-<form id="Gateway__PostForm" name="Gateway__PostForm" action="https://pgw.bpm.bankmellat.ir/pgwchannel/startpay.mellat" method="POST">
+<form id="Gateway__PostForm" name="Gateway__PostForm" action="https://bpm.shaparak.ir/pgwchannel/startpay.mellat" method="POST">
     <input type="hidden" name="RefId" value="@Model.RefId">
 </form>
 
